--- a/style.css
+++ b/style.css
@@ -64,6 +64,329 @@ body {
     color: rgb(252, 135, 40);
 }
 
+/*Página Tienda*/
+
+.grid-container {
+    display: grid;
+    margin-left: 20px;
+    margin-right: 20px;
+    grid-template-rows: 80px 50px 320px 25px 100px 320px 25px 100px 320px 25px;
+    grid-template-columns: repeat(4, auto);
+    grid-template-areas: 
+    "bienvenidos bienvenidos bienvenidos bienvenidos"
+    "amigurumis amigurumis amigurumis amigurumis"
+    "ami1 ami2 ami3 ami4"
+    "det1 det2 det3 det4"
+    "sweaters sweaters sweaters sweaters"
+    "swe1 swe2 swe3 swe4"
+    "det5 det6 det7 det8"
+    "accesorios accesorios accesorios accesorios"
+    "acc1 acc2 acc3 acc4"
+    "det9 det10 det11 det12";
+    
+}
+
+.grid-img {
+    height: 300px;
+}
+
+.bienvenidos {
+    grid-area: bienvenidos;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid-container h3 {
+ font-size: 33px;
+ font-family: "Lato", sans-serif;
+ font-weight: 900;
+ font-style: normal;
+ color: black;
+}
+
+.amigurumis {
+    grid-area: amigurumis;
+    margin-left: 15px;
+    display: flex;
+    align-items: end;
+    color: black;
+}
+
+.ami1 {
+    grid-area: ami1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det1 {
+    grid-area: det1;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.ami2 {
+    grid-area: ami2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det2 {
+    grid-area: det2;
+    display: flex;
+    justify-content: center;
+}
+
+.ami3 {
+    grid-area: ami3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det3 {
+    grid-area: det3;
+    display: flex;
+    justify-content: center;
+}
+
+.ami4 {
+    grid-area: ami4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det4 {
+    grid-area: det4;
+    display: flex;
+    justify-content: center;
+}
+
+.sweaters {
+    grid-area: sweaters;
+    margin-left: 15px;
+    display: flex;
+    align-items: end;
+    color: black;
+}
+
+.swe1 {
+    grid-area: swe1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det5 {
+    grid-area: det5;
+    display: flex;
+    justify-content: center;
+}
+
+.swe2 {
+    grid-area: swe2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det6 {
+    grid-area: det6;
+    display: flex;
+    justify-content: center;
+}
+
+.swe3 {
+    grid-area: swe3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det7 {
+    grid-area: det7;
+    display: flex;
+    justify-content: center;
+}
+
+.swe4 {
+    grid-area: swe4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det8 {
+    grid-area: det8;
+    display: flex;
+    justify-content: center;
+}
+
+.accesorios {
+    grid-area: accesorios;
+    margin-left: 15px;
+    display: flex;
+    align-items: end;
+    color: black;
+}
+
+.acc1 {
+    grid-area: acc1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det9 {
+    grid-area: det9;
+    display: flex;
+    justify-content: center;
+}
+
+.acc2 {
+    grid-area: acc2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det10 {
+    grid-area: det10;
+    display: flex;
+    justify-content: center;
+}
+
+.acc3 {
+    grid-area: acc3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det11 {
+    grid-area: det11;
+    display: flex;
+    justify-content: center;
+}
+
+.acc4 {
+    grid-area: acc4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.det12 {
+    grid-area: det12;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
+/*Página Cursos*/
+.portada-cursos {
+    width: 100%;
+}
+
+.grid-container {
+    display: grid;
+    margin-left: 20px;
+    margin-right: 20px;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: 50% 50%;
+    grid-template-areas:
+    "cursos cursos"
+    "curso1 curso2"
+    "detalles1 detalles2";
+}
+
+.cursos {
+    grid-area: cursos;
+}
+
+.cursos h3 {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.curso-uno {
+    grid-area: curso1;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.curso-dos {
+    grid-area: curso2;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.detalles-uno {
+    grid-area: detalles1;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.detalles-dos {
+    grid-area: detalles2;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.curso-img {
+    height: 300px;
+}
+
+
+@media only screen and (max-width: 500px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 80px 200px 50px 200px 50px;
+        grid-template-areas: 
+        "cursos"
+        "curso1"
+        "detalles1"
+        "curso2"
+        "detalles2";
+    }
+
+
+    .cursos h3 {
+        font-size: 20px;
+        width: 100%;
+        margin-top: 20px;
+    }
+    
+    .curso-img {
+        height: 190px;
+    }
+
+    .detalles-style {
+        font-size: 15px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -95,6 +418,8 @@ body {
 footer {
     background-color: #b89465;
     margin-top: 5%;
+    padding-top: 2%;
+    padding-bottom: 1%;
 
 }
 
@@ -110,9 +435,6 @@ footer {
     height: 100px;
 }
 
-.footer-ul {
-    
-}
 
 .footer-li {
     list-style-type: none;
@@ -126,7 +448,7 @@ footer {
 }
 
 .menu-footer:hover {
-    color: orangered;
+    color: #522f02;
     margin-left: 5px;
 }
 
@@ -156,6 +478,14 @@ footer {
 .icon-style {
     padding: 10px;
     font-size: 20px;
-    background-color: red;
+    background-color: #d3b899;
     border-radius: 50%;
+    color: #684f2f;
 }
+
+.icon-style:hover {
+    color: #d3b899;
+    background-color: #684f2f;
+}
+
+
