--- a/style.css
+++ b/style.css
@@ -680,4 +680,10 @@ footer {
     background-color: #684f2f;
 }
 
+@media only screen and (min-width: 377px) and (max-width: 611px){
+    .footer-ul {
+        margin-right: 30px;
+    }
+}
+
 
