--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     font-family: "Lato", sans-serif;
     font-weight: 600;
     font-style: normal;
+    font-size: 32px;
     margin-top: 30px;
 }
 
@@ -74,7 +75,7 @@ body {
 .tienda-bienvenidos h3 {
     font-size: 32px;
     font-family: "Lato", sans-serif;
-    font-weight: 900;
+    font-weight: 600;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -220,6 +221,9 @@ body {
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-size: 32px;
+    font-family: "Lato", sans-serif;
+    font-weight: 600;
 }
 
 .curso-uno {
@@ -355,7 +359,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: "Lato", sans-serif;
-    font-weight: 900;
+    font-weight: 600;
     font-style: normal;
     font-size: 33px;
     margin-top: 20px;
@@ -430,7 +434,7 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: "Lato", sans-serif;
-    font-weight: 900;
+    font-weight: 600;
     font-style: normal;
     font-size: 33px;
     margin-top: 20px;
