--- a/scss/pages/_cursos.scss
+++ b/scss/pages/_cursos.scss
@@ -53,6 +53,12 @@
     
     .curso-img {
         height: 300px;
+        transition-duration: 1s;
+
+        &:hover {
+            height: 350px;
+            transition: all 1s;
+        }
     }
 
 
