--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -25,8 +25,10 @@ footer {
         .menu-footer {
             color: black;
             text-decoration: none;
+            transition-duration: 35ms;
 
             &:hover {
+                transition: all 80ms;
                 color: #522f02;
                 margin-left: 5px;
             }
@@ -39,7 +41,6 @@ footer {
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-
 
         .icon-style {
             padding: 10px;
