--- a/scss/pages/_tienda.scss
+++ b/scss/pages/_tienda.scss
@@ -20,6 +20,12 @@
 
         img {
             height: 300px;
+            transition-duration: 1s;
+
+            &:hover {
+                height: 325px;
+                transition: all 1s;
+            }
         }
 
         h5 {
